# breaking_the_bad_habit

./: .env_sample  Dockerfile  README.md  breaking_the_bad_habit_data.json  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_rename_time_to_compete_habit_time_to_complete.py  0003_alter_habit_owner.py  0004_alter_habit_created_at.py  0005_alter_habit_created_at.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: comsupuser.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_user_is_subscription_user_tg_id_user_tg_username.py
